# SaaS-Restaurantes

./: .gitignore  LICENSE  README.md
.opencode/: instructions.md  opencode.jsonc
backend/: .gitignore  main.py  pyproject.toml
backend/api/: deps.py
backend/api/v1/: __init__.py
backend/api/v1/endpoints/: admins.py  auth.py  commissions.py  dashboard.py  menu.py  orders.py  payments.py  restaurants.py  tables.py
backend/core/: config.py  database.py  security.py  supabase.py
backend/migrations/: 000_full_schema.sql  001_create_tables.sql  002_rls_policies.sql  003_seed_data.sql  004_add_image_url_2.sql  full_schema.sql
backend/models/: __init__.py  base.py  commission.py  menu_category.py  menu_item.py  order.py  order_item.py  order_status_history.py  payment.py  profile.py  restaurant.py  table.py
backend/repositories/: __init__.py  base.py  commission.py  dashboard.py  menu_category.py  menu_item.py  order.py  order_item.py  order_status_history.py  payment.py  profile.py  restaurant.py  table.py
backend/schemas/: __init__.py  auth.py  base.py  commission.py  dashboard.py  menu_category.py  menu_item.py  order.py  order_item.py  payment.py  profile.py  restaurant.py  table.py
backend/scripts/: migrate.py  seed.py  seed_auth_users.py
backend/services/: __init__.py  auth.py  commission.py  dashboard.py  menu.py  order.py  payment.py  profile.py  restaurant.py  table.py
frontend/: admin_payments.html  package-lock.json  package.json  stitch_tools.json  superadmin_overview.html
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  (+5 more)
(+29 files in other folders)
